client/src/index.css
body {
  margin: 0;
}

:root {
  font-family: Inter, system-ui, Avenir, Helvetica, Arial, sans-serif;
  line-height: 1.5;
  font-weight: 400;

  color-scheme: light dark;
  color: rgba(255, 255, 255, 0.87);
  background-color: #242424;

  font-synthesis: none;
  text-rendering: optimizeLegibility;
  -webkit-font-smoothing: antialiased;
  -moz-osx-font-smoothing: grayscale;
}

* {
  box-sizing: border-box;
  margin: 0px;
  padding: 0px;
}

@media (prefers-color-scheme: light) {
  :root {
    color: #213547;
    background-color: #ffffff;
  }
}

.hyf-navbar-logo-img {
  max-width: 100%;
  vertical-align: middle;
  padding: 8px 0;
  display: inline-block;
  border: 0;
  box-sizing: border-box;
}

.login-container {
  padding-top: 20vh;
  width: 40%;
  margin: auto;
  display: flex;
  flex-direction: column;
  align-items: center;
  min-width: 200px;
}

.hyf-logo-img {
  height: 100px;
  background-color: black;
  padding: 10px;
  margin-bottom: 50px;
}

.login-button {
  min-width: 400px;
}

.App {
  height: 100vh;
  width: 100vw;
  color: #333;
  background: #fff;
}

.search-bar-container {
  padding-top: 20vh;
  width: 40%;
  margin: auto;
  display: flex;
  flex-direction: column;
  align-items: center;
  min-width: 200px;
}

.hyf-logo-img {
  height: 100px;
  background-color: black;
  padding: 10px;
  margin-bottom: 50px;
}

.input-wrapper {
  background-color: white;
  width: 100%;
  border-radius: 10px;
  height: 3rem;
  padding: 0 15px;
  box-shadow: 0px 0px 0px #ddd;
  display: flex;
  align-items: center;
}

#dateEmpty[type='date']::-webkit-datetime-edit {
  display: none;
}

